--- a/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
@@ -8,7 +8,8 @@ metadata:
      nginx.com/health-checks: "true"
 spec:
   rules:
-  - http:
+  - host: {{ .Values.domain }}
+    http:
       paths:
       - path: /config 
         backend:
