[MOSIP-1124] Major helm restructure. WIP.  Glowroot common setting added in kernel.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -25,6 +25,8 @@ site:
 install_root: /home/mosipuser/mosip-infra/deployment/sandbox-v2
 charts_root: '{{install_root}}/helm/charts'  # Helm charts root
 
+is_glowroot: absent  # or present
+
 artifactory_uri: 'http://13.71.87.138:8040'
 
 docker_wait_time: 600   # Wait for docker to pull and deploy
