--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: {{ .Values.pv.name }} 
-  label:
+  labels:
     name: {{ .Values.pv.name }} 
 spec:
   storageClassName: {{ .Values.sc.name }} 
