--- a/deployment/sandbox-v2/playbooks/kernel.yml
+++ b/deployment/sandbox-v2/playbooks/kernel.yml
@@ -1,16 +1,18 @@
 # This play installs all Kernel services using Helm
 
-# Softhsm is needed for Keymanager
+ Softhsm is needed for Keymanager
 - import_playbook: softhsm.yml 
   vars:
     hsm_prop: '{{softhsm.keymanager}}'
 
 ## Run all kernel services
 - hosts: console
-  gather_facts: true
-  vars:   
-    kube_config: '{{clusters.mz.kube_config}}' 
+  vars:
+    kube_config: '{{clusters.mz.kube_config}}'
+    install_name: 'kernel'
     helm_chart: '{{charts_root}}/kernel'
-    install_name: kernel
+    is_template: true  
+    helm_namespace: 'default'
+    helm_values: '{{charts_root}}/kernel/values.template.j2'
   roles:
-    - {role: helm, tags: [kernel]} 
+    - {role:  helm}
