--- a/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
@@ -15,4 +15,11 @@ spec:
         backend:
           serviceName: {{ .Values.name }} 
           servicePort: 80 
+  - host: {{ .Values.internalDomain }}
+    http:
+      paths:
+      - path: /config 
+        backend:
+          serviceName: {{ .Values.name }} 
+          servicePort: 80 
 
