--- a/deployment/sandbox-v2/playbooks/kernel.yml
+++ b/deployment/sandbox-v2/playbooks/kernel.yml
@@ -1,8 +1,9 @@
 # This play installs all Kernel services using Helm
 
- Softhsm is needed for Keymanager
+# Softhsm is needed for Keymanager
 - import_playbook: softhsm.yml 
   vars:
+    kube_config: '{{clusters.mz.kube_config}}' 
     hsm_prop: '{{softhsm.keymanager}}'
 
 ## Run all kernel services
