--- a/deployment/sandbox-v2/helm/charts/kernel/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/ingress-file.yaml
@@ -19,4 +19,15 @@ spec:
           servicePort: {{ $service.servicePort }} 
         {{ end }}
       {{- end }}
+  - host: {{ .Values.internalDomain }}
+    http:
+      paths:
+      {{- range $index, $service := .Values.services }}
+        {{ if $service.ingressPath }}
+      - path: {{ $service.ingressPath }} 
+        backend:
+          serviceName: {{ $service.serviceName }}
+          servicePort: {{ $service.servicePort }} 
+        {{ end }}
+      {{- end }}
 
