--- a/deployment/sandbox-v2/playbooks/reset/reset-landing.yml
+++ b/deployment/sandbox-v2/playbooks/reset/reset-landing.yml
@@ -9,7 +9,7 @@
   tasks:
    - name: Delete landing zone
      file: 
-       path: '{{regproc.landing_folder}}/'
+       path: '{{regproc.nfs.landing_folder}}/'
        state: absent     
      when: sure.lower().strip() == 'yes'
      become: yes
