[MOSIP-1124] Internal domain added in Keycloak.

--- a/deployment/sandbox-v2/helm/charts/keycloak/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/keycloak/templates/ingress-file.yaml
@@ -21,3 +21,10 @@ spec:
         backend:
           serviceName: {{ .Values.name }}
           servicePort: {{ .Values.servicePort }} 
+  - host: {{ .Values.internalDomain }}
+    http:
+      paths:
+      - path: /keycloak(/|$)(.*)
+        backend:
+          serviceName: {{ .Values.name }}
+          servicePort: {{ .Values.servicePort }} 
