Temporarily enabled hdfs access for dmz till issue is fixed.

--- a/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-nn-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-nn-svc.yaml
@@ -9,13 +9,15 @@ metadata:
     release: {{ .Release.Name }}
     component: hdfs-nn
 spec:
+  type: NodePort
   ports:
   - name: dfs
     port: 9000
     protocol: TCP
+    nodePort: 30124  # TODO: remove later
   - name: webhdfs
     port: 50070
-  clusterIP: None
+#  clusterIP: None
   selector:
     app: {{ include "hadoop.name" . }}
     release: {{ .Release.Name }}
