--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
@@ -288,7 +288,7 @@ mosip.kernel.virus-scanner.host=mzworker0
 mosip.kernel.virus-scanner.port=30310
 
 #-------------------------------FS Adapter- HDFS -------------------------------
-mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://hadoop-hdfs-nn:9000
+mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://mzworker0:30124
 mosip.kernel.fsadapter.hdfs.authentication-enabled=false
 # If HDFS is security is configured with Kerberos, Key Distribution Center domain
 mosip.kernel.fsadapter.hdfs.kdc-domain=HDFSKERBEROS1.SOUTHINDIA.CLOUDAPP.AZURE.COM
