--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -6,6 +6,8 @@
 - import_playbook: playbooks/nfs.yml 
 - import_playbook: playbooks/mzcluster.yml
 - import_playbook: playbooks/dmzcluster.yml
+- import_playbook: playbooks/mzmonitoring.yml
+- import_playbook: playbooks/dmzmonitoring.yml
 - import_playbook: playbooks/postgres.yml
 - import_playbook: playbooks/keycloak.yml
 - import_playbook: playbooks/clamav.yaml
