[MOSIP-7724] All dashboard links presented in doman name index page.

--- a/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
+++ b/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
@@ -11,6 +11,17 @@
     dest: '/etc/nginx'
   become: yes
 
+- name: nginx index.html template to yaml
+  template:
+    src: nginx_index.yml.j2
+    dest: '{{tmp_dir}}/nginx_index.html'
+
+- name: Copy index file
+  copy:
+    src: '{{tmp_dir}}/nginx_index.html'
+    dest: '/usr/share/nginx/html/index.html'
+  become: yes
+
 - name: Restart nginx
   command: 'systemctl restart nginx'
   become: yes
