--- a/deployment/sandbox-v2/helm/charts/prereg/templates/batch-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/batch-dep.yaml
@@ -38,7 +38,7 @@ spec:
         - name: artifactory_url_env
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
-          value: absent
+          value: {{ .Values.isGlowroot }}
         ports:
         - containerPort: {{ .Values.services.batch.containerPort }}
         readinessProbe:  #TODO: Since no actuator, we watch tcp port. Is there an actuator?
