--- a/deployment/sandbox-v2/helm/charts/prereg/templates/demographic-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/demographic-dep.yaml
@@ -38,7 +38,7 @@ spec:
         - name: artifactory_url_env
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
-          value: absent
+          value: {{ .Values.isGlowroot }}
         ports:
         - containerPort: {{ .Values.services.demographic.containerPort }}
         readinessProbe:
