[MOSIP-1806] Minimum resources specified for postgres pod.

--- a/deployment/sandbox-v2/helm/charts/postgres/templates/pg-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/postgres/templates/pg-dep.yaml
@@ -33,6 +33,8 @@ spec:
           value: {{ .Values.password }} 
         ports:
         - containerPort: {{ .Values.docker.containerPort }}
+        resources:
+{{ toYaml .Values.resources | indent 10 }}
         readinessProbe:
           tcpSocket:
             port: {{ .Values.docker.containerPort }}
