Keycloak property corrected

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -310,10 +310,10 @@ mosip.master.realm-id=master
 
 mosip.admin.pre-reg_user_password=mosip
 
-db_3_DS.keycloak.ipaddress=jdbc:postgresql://13.71.118.209:9001/keycloak
-db_3_DS.keycloak.port=9001
+db_3_DS.keycloak.ipaddress= jdbc:postgresql://${mosip.kernel.database.hostname}:${mosip.kernel.database.port}/keycloak
+db_3_DS.keycloak.port=80
 db_3_DS.keycloak.username=postgres
-db_3_DS.keycloak.password=mosip
+db_3_DS.keycloak.password=postgres
 db_3_DS.keycloak.driverClassName=org.postgresql.Driver
 
 mosip.keycloak.admin.client.id=admin-cli
