--- a/deployment/sandbox-v2/roles/config-repo/files/properties/admin-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/admin-mz.properties
@@ -157,13 +157,13 @@ mosip.kernel.audit.manager.api=http://kernel-auditmanager-service/v1/auditmanage
 mosip.kernel.masterdata.audit-url=http://kernel-auditmanager-service/v1/auditmanager/audits
 
 -----------
-mosip.open-id.base-url=http://keycloak:80/
+mosip.open-id.base-url={{ site.sandbox_public_url }}/keycloak
 mosip.admin-services.audit.manager.api=http://kernel-auditmanager-service/v1/auditmanager/audits
 mosip.admin-services.open-id.realmid=mosip
 mosip.admin-services.open-id.login_flow.name=authorization_code
 mosip.admin-services.open-id.clientid=mosip-admin-servies-client
 mosip.admin-services.open-id.clientsecret=abc123
-mosip.admin-services.redirecturi=http://localhost:8098/v1/admin/login-redirect/
+mosip.admin-services.redirecturi={{ site.sandbox_public_url }}/v1/admin/login-redirect/
 mosip.admin-services.open-id.login_flow.scope=cls
 mosip.admin-services.open-id.login_flow.response_type=code
 mosip.admin-services.open-id.authorization_endpoint=${mosip.open-id.base-url}/auth/realms/{realmId}/protocol/openid-connect/auth
