[MOSIP-1124] Ingress file enchanced to add internal host.

--- a/deployment/sandbox-v2/helm/charts/ida/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/ingress-file.yaml
@@ -17,4 +17,13 @@ spec:
           serviceName: {{ $service.serviceName }}
           servicePort: {{ $service.servicePort }} 
       {{- end }}
+  - host: {{ .Values.internalDomain }}
+    http:
+      paths:
+      {{- range $index, $service := .Values.services }}
+      - path: {{ $service.ingressPath }} 
+        backend:
+          serviceName: {{ $service.serviceName }}
+          servicePort: {{ $service.servicePort }} 
+      {{- end }}
 
