--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-ingress.yaml
@@ -12,7 +12,16 @@ metadata:
       
 spec:
   rules:
-  - http:
+  - host: {{ .Values.domainName }}
+    http:
+      paths:
+      - path: /registrationprocessor/v1/dmzpacketserver(/|$)(.*)
+        backend:
+          serviceName: {{ .Values.services.pktserver.serviceName }}
+          servicePort: {{ .Values.services.pktserver.ports.servicePort }}
+
+  - host: {{ .Values.internalDomain }}
+    http:
       paths:
       - path: /registrationprocessor/v1/dmzpacketserver(/|$)(.*)
         backend:
