--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -69,7 +69,9 @@ keycloak_mosip_users: # Assumption "username.json" exists with same username ins
   - {realm_id: 'mosip', user_file: 'users/regproc_test.json'}
   - {realm_id: 'mosip', user_file: 'users/110127.json'}
   - {realm_id: 'mosip', user_file: 'users/mosipautouser.json'}
-  
+  - {realm_id: 'mosip', user_file: 'users/110022.json'}
+  - {realm_id: 'mosip', user_file: 'users/pm_testuser.json'}
+ 
   
 
 keycloak_mosip_user_role_map:  
@@ -221,6 +223,31 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110024', role_name: 'REGISTRATION_ADMIN'}
   - {realm_id: 'mosip', username: '110024', role_name: 'REGISTRATION_OFFICER'}
   - {realm_id: 'mosip', username: '110024', role_name: 'REGISTRATION_SUPERVISOR'}
+  
+  - {realm_id: 'mosip', username: '110022', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'ID_AUTHENTICATION'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'DEVICE_PROVIDER'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'SUPERADMIN'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'ZONAL_ADMIN'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'RESIDENT'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'ZONAL_APPROVER'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'REGISTRATION_OPERATOR'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'CENTRAL_APPROVER'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'MISP'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'PREREG'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'CENTRAL_ADMIN'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'PRE_REGISTRATION'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'REGISTRATION_SUPERVISOR'}
+  - {realm_id: 'mosip', username: '110022', role_name: 'RESIDENT'}
+  
+  - {realm_id: 'mosip', username: 'pm_testuser', role_name: 'MISP'}
+  - {realm_id: 'mosip', username: 'pm_testuser', role_name: 'PARTNER'}
+  - {realm_id: 'mosip', username: 'pm_testuser', role_name: 'POLICYMANAGER'}
+  - {realm_id: 'mosip', username: 'pm_testuser', role_name: 'PARTNERMANAGER'}
 
     # For service account mappings client name must be prefixed with service-account-
   - {realm_id: 'mosip', username: 'service-account-mosip-prereg-client', role_name: 'INDIVIDUAL'}
