Postal proxy property added.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -302,6 +302,10 @@ registration.processor.queue.address = print-service-qa
 #Post Service address
 registration.processor.queue.printpostaladdress = postal-service-qa
 
+# Enable proxy postal service response for test environments where actual postal service wont be available
+# IMPORTANT : This should always be set as false in actual production environment
+registration.processor.enable.proxy.postalservice=true
+
 #------------Packet Validator Stage-----------
 #Attributes to be validated in master data validation
 registration.processor.masterdata.validation.attributes = gender,region,province,city
