--- a/deployment/sandbox-v2/playbooks/reset/reset-hdfs.yml
+++ b/deployment/sandbox-v2/playbooks/reset/reset-hdfs.yml
@@ -9,12 +9,12 @@
   tasks:
     - name: Delete namenode data
       file: 
-        path: '{{hdfs.nn_path}}/'
+        path: '{{hdfs.nfs.nn.path}}'
         state: absent     
       when: sure.lower().strip() == 'yes'
 
     - name: Delete datanode data
       file: 
-        path: '{{hdfs.dn_path}}/'
+        path: '{{hdfs.nfs.dn.path}}'
         state: absent     
       when: sure.lower().strip() == 'yes'
