--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -108,7 +108,7 @@ mosip.preregistration.id-schema=${kernel.syncdata.env}/${kernel.syncdata.version
 
 # OTP
 sendOtp.resource.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.auth.contextpath}
-otpChannel.mobile=mobile
+otpChannel.mobile=phone
 otpChannel.email=email
 userIdType=USERID
 appId=prereg
