--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -219,7 +219,7 @@ mosip.identity.auth.internal.requestid=mosip.identity.auth.internal
 registration.processor.validate.introducer=true
 mosip.kernel.device.validate.history.id=""
 #UMC configuarble
-mosip.registartion.processor.validateUMC=false
+mosip.registartion.processor.validateUMC=true
 
 #---------Packet Receiver Stage------------
 #Maximum file size to be upload from packet receiver
