--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -110,8 +110,7 @@ MASTER=http://kernel-masterdata-service/v1/masterdata
 MACHINEHISTORY=${MASTER}/machineshistories
 CENTERHISTORY=${MASTER}/registrationcentershistory
 CENTERUSERMACHINEHISTORY=${MASTER}/getregistrationmachineusermappinghistory
-# TODO: Is the below url needed?
-REVERSEDATASYNC=${mosip.base.url}/preregistration/v1/sync/consumedPreRegIds 
+REVERSEDATASYNC=http://prereg-datasync-service/preregistration/v1/sync/consumedPreRegIds
 CENTERDETAILS=${MASTER}/registrationcenters
 MACHINEDETAILS=${MASTER}/machines
 DEVICESHISTORIES=${MASTER}/deviceshistories
