Readiness probe removed from dmz regproc due issues in starting, and on load.

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
@@ -45,12 +45,12 @@ spec:
           containerPort: {{ .Values.services.receiver.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.receiver.ports.containerPort }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.receiver.healthUrl }} 
-            port: {{ .Values.services.receiver.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        readinessProbe:
+#          httpGet:
+#            path: {{ .Values.services.receiver.healthUrl }} 
+#            port: {{ .Values.services.receiver.ports.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
  #       livenessProbe:
  #         httpGet:
  #           path: {{ .Values.services.receiver.healthUrl }} 
