--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/camel-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/camel-dep.yaml
@@ -46,12 +46,12 @@ spec:
           containerPort: {{ .Values.services.camel.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.camel.ports.containerPort }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.camel.healthUrl }} 
-            port: {{ .Values.services.camel.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+#        readinessProbe:
+#          httpGet:
+#            path: {{ .Values.services.camel.healthUrl }} 
+#            port: {{ .Values.services.camel.ports.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
  #       livenessProbe:
  #         httpGet:
  #           path: {{ .Values.services.camel.healthUrl }} 
