--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
@@ -180,7 +180,7 @@ mosip.registration.last_export_registration_config_time=100
 
 #Create CBEFF file with both Duplicate and Unique Tags or with only Unique Tags. If Y, only Unique Tags will be available in CBEFF.
 #If N, both Duplicate and Unique Tags will be available
-mosip.registration.cbeff_only_unique_tags=N
+mosip.registration.cbeff_only_unique_tags=Y
 
 #----Default Values to be used for Auditing----
 
@@ -388,3 +388,4 @@ mosip.registration.jobs.restart =RCS_J00005
 mosip.registration.jobs.scheduler.enable = Y
 
 
+mosip.kernel.packetmanager.cbeff_only_unique_tags=Y
