[MOSIP-7867]  Softhsm folders mounted in IDA services for perf testing. Dockers changed.

--- a/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
@@ -55,3 +55,10 @@ spec:
 #            port: {{ .Values.services.kyc.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }}
+        volumeMounts:
+        - name: softhsm-data
+          mountPath: /softhsm/var/lib/softhsm/
+      volumes:
+      - name: softhsm-data
+        persistentVolumeClaim:
+          claimName: softhsm-ida-pvc
