--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
@@ -9,7 +9,7 @@ spec:
   capacity:
     storage: {{ .Values.pv.size }}
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   nfs:
     server:  {{ .Values.nfs.server }}
     path: {{ .Values.nfs.path }} 
