--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -1,3 +1,5 @@
+# Inventory file with for setup with more machines in 
+# clusters
 [console]
 console ansible_user=mosipuser
 
@@ -9,29 +11,35 @@ console ansible_user=mosipuser
 console ansible_user=mosipuser  
 
 # All k8s clusters
-[clusters:children]  
+[clusters:children]
 mzcluster
 #dmzcluster
 
 # Military zone (secure zone) cluster
 [mzcluster:children]
-mzmaster 
-mzworkers 
+mzmaster
+mzworkers
 
 [mzmaster]
 mzmaster ansible_user=root
 
 [mzworkers]
-mzworker0 ansible_user=root 
+mzworker0 ansible_user=root
 mzworker1 ansible_user=root
 mzworker2 ansible_user=root
+mzworker3 ansible_user=root
+mzworker4 ansible_user=root
+mzworker5 ansible_user=root
+mzworker6 ansible_user=root
+mzworker7 ansible_user=root
+mzworker8 ansible_user=root
 
 # De-Military zone (dmz) cluster
 [dmzcluster:children]
-dmzmaster 
-dmzworkers 
+dmzmaster
+dmzworkers
 [dmzmaster]
 dmzmaster ansible_user=root
 [dmzworkers]
-dmzworker0 ansible_user=root 
+dmzworker0 ansible_user=root
 
