--- a/deployment/sandbox-v2/playbooks/mzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/mzcluster.yml
@@ -11,9 +11,10 @@
     kube_config: '{{clusters.mz.kube_config}}'
     install_name: 'ingress-nginx'
     helm_chart: '{{charts_root}}/ingress-nginx'
-    is_template: false
-    helm_namespace: 'default'
-    helm_values: '{{charts_root}}/ingress-nginx/values.yaml'
+    is_template: true
+    helm_namespace: '{{clusters.mz.ingress.namespace}}'
+    helm_values: '{{charts_root}}/ingress-nginx/values.template.j2'
+    ingress_ports: '{{clusters.mz.ingress.nodeports}}'
   roles:
     - {role:  helm, tags: [mz-ingress]}
 
