--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -391,3 +391,8 @@ registration.processor.signature.isEnabled=true
 
 #BioDedupe stage
 registration.processor.infant.dedupe=N
+
+# ID Authentication 
+IDAUTHENCRYPTION=http://ida-internal-service/idauthentication/v1/internal/encrypt
+IDAUTHPUBLICKEY=http://ida-internal-service/idauthentication/v1/internal/publickey
+
