--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
@@ -332,9 +332,9 @@ mosip.left_to_right_orientation=eng,fra
 
 #**************** Notification Type *************
 mosip.notificationtype=SMS|EMAIL
-mosip.kernel.sms.proxy-sms=true
-mosip.kernel.auth.proxy-otp=true
-mosip.kernel.auth.proxy-email=true
+mosip.kernel.sms.proxy-sms=false
+mosip.kernel.auth.proxy-otp=false
+mosip.kernel.auth.proxy-email=false
 #******** Notification lanugage types - either PRIMARY or BOTH ********
 mosip.notification.language-type=BOTH
 
