[MOSIP-7350] updated parameters.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -28,7 +28,7 @@ mosip.kernel.sms.gateway=msg91
 
 #--msg91 gateway--
 mosip.kernel.sms.api=http://api.msg91.com/api/v2/sendsms
-mosip.kernel.sms.authkey=310700AWNFv5trV5e09ec07P1
+mosip.kernel.sms.authkey={{site.msg91.authkey}}
 mosip.kernel.sms.route=4
 mosip.kernel.sms.sender=MOSMSG
 mosip.kernel.sms.unicode=1
