[MOSIP-7350] Updated changes for sms gateway configuration

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -21,8 +21,12 @@ site:
     host: smtp.sendgrid.net
     username: apikey
     password: password
-  msg91:
+  sms:
+    api: gateway api
     authkey: authkey
+    route: route
+    senser: sender
+    unicode: unicode
    
 user_home: '{{lookup("env", "HOME")}}'
 install_root: '{{user_home}}/mosip-infra/deployment/sandbox-v2'
