[MOSIP-7350] updated gateway settings

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -24,7 +24,7 @@ mosip.kernel.sms.country.code=91
 mosip.kernel.sms.number.length=10
 
 #mosip.kernel.sms.gateway : "infobip" or "msg91"
-mosip.kernel.sms.gateway=msg91
+mosip.kernel.sms.gateway={{site.sms.gateway}}
 
 #--msg91 gateway--
 mosip.kernel.sms.api={{site.sms.api}}
