[MOSIP-7350] updated for gateway settings.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -22,6 +22,7 @@ site:
     username: apikey
     password: password
   sms:
+    gateway: gateway name
     api: gateway api
     authkey: authkey
     route: route
